# rust-todo-app

./: Cargo.toml  docs.md  init.sql
src/: db_connection.rs  main.rs
