[package]
name = "rocket-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
postgres = "0.19.7"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-rustls", "macros"] }
log = "0.4.20"
env_logger = "0.10.1"
redis = { version = "0.23.4", features = ["tokio-comp"] }
rocket_cors = "0.6.0"